@@ -101,7 +101,8 @@
         Mattias Ulbrich,
         David Weitzman,
         Seb Wills,
-        John Zedlewski</p>
+        John Zedlewski,
+        Ruy Minoru Ito Takata</p>
 
         <h2>Thanks to:</h2>
 
